# Miniarm_ObjectRecognition

client/src/yolo_ros/: CMakeLists.txt
client/src/yolo_ros/src/: host_client.cpp
ros-yolo-opencv-project3/.devcontainer/: Dockerfile  docker-compose.yml
ros-yolo-opencv-project3/src/yolo_ros/: CMakeLists.txt  package.xml
ros-yolo-opencv-project3/src/yolo_ros/launch/: yolo_realsense.launch
ros-yolo-opencv-project3/src/yolo_ros/scripts/: yolo_subscriber.py  yolo_unified_node.py
