<?xml version="1.0"?>
<package format="2">
  <name>yolo_ros</name>
  <version>0.0.0</version>
  <description>A simple ROS package for YOLOv8 object detection with RealSense.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>realsense2_camera</depend>

</package>